<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Register">

    <TextView
            android:id="@+id/title"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_width="103dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/user_name"
            android:layout_width="347dp"
            android:layout_height="47dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintHorizontal_bias="0.478"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/user_pwd"/>

    <EditText
            android:id="@+id/user_pwd"
            android:layout_width="349dp"
            android:layout_height="46dp"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="352dp" app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintVertical_bias="0.771"/>

    <Button
            android:id="@+id/btn_register"
            android:text="@string/btn_register"
            android:background="#1078F8"
            android:layout_width="101dp"
            android:layout_height="53dp"
            app:layout_editor_absoluteY="200dp"
            app:layout_editor_absoluteX="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="244dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_pwd" app:layout_constraintVertical_bias="0.811"/>

    <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:background="#1078F8"
            android:layout_width="107dp"
            android:layout_height="53dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintStart_toEndOf="@+id/btn_register"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="244dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_pwd" app:layout_constraintVertical_bias="0.811"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="64dp"
            android:layout_height="49dp"
            android:visibility="gone"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_pwd" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintVertical_bias="0.409"/>

    <TextView
            android:id="@+id/mTvLogin"
            android:text="@string/mTvLogin"
            android:layout_width="63dp"
            android:layout_height="22dp"
            android:textColor="#FF0000"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/user_pwd" app:layout_constraintHorizontal_bias="1.0"/>

</android.support.constraint.ConstraintLayout>