<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipToPadding="false"
              android:orientation="vertical"
              android:fitsSystemWindows="true" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        <ImageView
                android:src="@mipmap/back"
                android:layout_width="23dp"
                android:layout_height="24dp"
                android:padding="3dp"
                android:gravity="left"
                android:id="@+id/inventory_back"/>

        <TextView
                android:text="@string/inventory_scan"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/inventory_scan"
                android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
        <TextView
                android:text="AAAA"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/code_num"
                android:textColor="@color/blue"/>
        <TextView
                android:text="AAAA"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/count_num"
                android:textColor="@color/blue"/>
        <TextView
                android:text="AAA"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/matched_num"
                android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        <TextView
                android:text="@string/code"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/code"/>
        <TextView
                android:text="@string/count"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/count"/>
        <TextView
                android:text="@string/matched"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/matched"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:orientation="vertical">
        <ListView
                android:id="@+id/list_item"
                android:scrollbars="vertical"
                android:fadingEdge="vertical"
                android:overScrollMode="never"
                android:dividerHeight="0.5dp"
                android:layout_width="match_parent"
                android:layout_height="330dp"/>
        <!--<EditText
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Name"
                        android:ems="10"
                        android:id="@+id/result"/>-->


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">
            <Button
                android:text="@string/scan"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:id="@+id/scan"
                android:gravity="center"
                android:background="@color/blue"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center">

            <Button
                android:text="@string/upload"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:id="@+id/upload"
                android:gravity="center"
                android:background="@color/blue"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
