<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".view.Clean">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/gray1"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/clean_back"
            android:src="@mipmap/back"
            android:layout_width="20dp"
            android:layout_margin="10dp"
            android:layout_height="25dp"/>

        <TextView
            android:id="@+id/clean_receipts"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/scan_receipts"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">
        <com.zrz.inventory.widget.LoadListView
                android:id="@+id/clean_listView"
                android:scrollbars="vertical"
                android:fadingEdge="vertical"
                android:overScrollMode="never"
                android:choiceMode="multipleChoice"
                android:layout_width="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:layout_weight="1"
                android:layout_height="0dp"/>

        <TextView
                android:id="@+id/clean_no_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_empty"
                android:visibility="gone"
                android:gravity="center"
                android:textSize="14sp"
                android:ems="18"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">
            <Button
                    android:id="@+id/check_all"
                    android:text="@string/check_all"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="left"
                    android:background="@drawable/button_shape"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>
            <Button
                    android:id="@+id/delete"
                    android:text="@string/delete"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_gravity="right"
                    android:background="@drawable/button_shape"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>